@@ -11,3 +11,33 @@ Index: b/kern/emu/hostdisk.c
  
    if (bsd_part >= 0)
      bsd_part_str = xasprintf (",%d", bsd_part + 1);
+@@ -1422,6 +1422,29 @@
+ 
+ 	if (start == part_start)
+ 	  {
++	    if (getenv ("GRUB_LEGACY_0_BASED_PARTITIONS"))
++	      {
++		int dos_part, bsd_part;
++		char *fullname, *comma;
++
++		if (partition->parent)
++		  {
++		    dos_part = partition->parent->number;
++		    bsd_part = partition->number;
++		  }
++		else
++		  {
++		    dos_part = partition->number;
++		    bsd_part = -1;
++		  }
++
++		fullname = make_device_name (drive, dos_part, bsd_part);
++		comma = strchr (fullname, ',');
++		partname = comma ? xstrdup (comma + 1) : NULL;
++		free (fullname);
++		return 1;
++	      }
++
+ 	    partname = grub_partition_get_name (partition);
+ 	    return 1;
+ 	  }
